syntax = "proto3";

package userEntity;

option go_package = "./user";

message User{
    string user_id = 1;
    string email = 2;
}

message UserRequest{
    string user_id = 1;
}

message RegisterUserRequest{
    string username = 1;
    string password = 2;
}

message RegisterUserResponse{
    User user = 1;
}

service UserService{
    rpc GetUser(UserRequest)returns(User);
    rpc RegisterUsers(stream RegisterUserRequest)returns(stream RegisterUserResponse);
}